--- a/mutt/accounts.pug
+++ b/mutt/accounts.pug
@@ -4,8 +4,8 @@ macro index H <change-folder>imaps://ats@pug.qqx.org/
 
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set from="aaron@schrab.com"'
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set folder=imaps://ats@pug.qqx.org/'
-folder-hook 'imaps?://ats@pug.qqx.org/' 'set spoolfile=+INBOX'
-folder-hook 'imaps?://ats@pug.qqx.org/' 'set postponed=+Drafts'
+folder-hook 'imaps?://ats@pug.qqx.org/' 'set spoolfile==INBOX'
+folder-hook 'imaps?://ats@pug.qqx.org/' 'set postponed==Drafts'
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set record=!/old'
 
 send2-hook '~f @(schrab\.com\|(pug\.)?qqx\.org)' 'unset smtp_url'
