mutt - Binding for toggling alternative order
Define macros for toggling alternative_order to switch between doing
HTML rendering and viewing text/plain portion of a multipart/alternative
message.

Generally the plain text version is preferable, but some messages (esp.
marketing emails) include completely useless plain text versions.

--- a/mutt/accounts.pug
+++ b/mutt/accounts.pug
@@ -1,6 +1,6 @@
 # vim: tw=0 ft=muttrc
 
-macro index H <change-folder>imaps://ats@pug.qqx.org/
+#macro index H <change-folder>imaps://ats@pug.qqx.org/
 
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set from="aaron@schrab.com"'
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set folder=imaps://ats@pug.qqx.org/'
