mutt - Store saved messages in `Archive`
Had been storing this in `old`, use new name to match what is done by
Outlook's archive shortcut.

--- a/mutt/accounts.pug
+++ b/mutt/accounts.pug
@@ -6,6 +6,6 @@ folder-hook 'imaps?://ats@pug.qqx.org/' 'set from="aaron@schrab.com"'
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set folder=imaps://ats@pug.qqx.org/'
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set spoolfile==INBOX'
 folder-hook 'imaps?://ats@pug.qqx.org/' 'set postponed==Drafts'
-folder-hook 'imaps?://ats@pug.qqx.org/' 'set record=!/old'
+folder-hook 'imaps?://ats@pug.qqx.org/' 'set record="=Archive"'
 
 send2-hook '~f @(schrab\.com\|(pug\.)?qqx\.org)' 'unset smtp_url'
