--- a/Firefox/chrome/userChrome.css
+++ b/Firefox/chrome/userChrome.css
@@ -1,7 +1,18 @@
-#main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar {
+
+#main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar>.toolbar-items {
   opacity: 0;
   pointer-events: none;
 }
+
 #main-window:not([tabsintitlebar="true"]) #TabsToolbar {
-    visibility: collapse !important;
+  visibility: collapse !important;
+}
+
+#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header {
+  display: none;
+}
+
+.tab {
+  margin-left: 1px;
+  margin-right: 1px;
 }
